# lranges

./: .clang-format  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: TransformConfig.cmake.in
header-only/: CMakeLists.txt
header-only/include/: transform.h
lranges/: CMakeLists.txt
lranges/cmake/: LRangesConfig.cmake.in
lranges/include/: lranges.h
scripts/: genreport.sh
test/: CMakeLists.txt
test/src/: main.cpp  test_iterators.cpp
